--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -2,9 +2,10 @@
  * Site header
  */
 .site-header {
-    border-top: 5px solid $grey-color-dark;
+    border-top: 0px solid $grey-color-dark;
     border-bottom: 1px solid $grey-color-light;
     min-height: 56px;
+    background-color: $header-light;
 
     // Positioning context for the mobile navigation icon
     position: relative;
@@ -191,7 +192,7 @@
 
 .post-link {
     display: block;
-    font-size: 24px;
+    font-size: 18px;
 }
 
 
