add header color

--- a/_sass/_rocks.scss
+++ b/_sass/_rocks.scss
@@ -6,7 +6,9 @@ $blue:       #455979;
 $blue-light: lighten($blue, 25%);
 $blue-dark:  darken($blue, 25%);
 
-$header-light: #adcfff;
+$header-light: #cddfff;
+$header-medium: #a4b2cc;
+$header-dark: #7b8599;
 
 $orange: #e55909;
 
