--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -100,12 +100,13 @@
  */
 .site-footer {
     border-top: 1px solid $grey-color-light;
-    padding: $spacing-unit 0;
+    padding: 10px 0;
+	background: $header-light;
 }
 
 .footer-heading {
     font-size: 18px;
-    margin-bottom: $spacing-unit / 2;
+    margin-bottom: $spacing-unit 0;
 }
 
 .contact-list,
@@ -205,7 +206,7 @@
 }
 
 .post-title {
-    font-size: 42px;
+    font-size: 36px;
     letter-spacing: -1px;
     line-height: 1;
 
