--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -4,7 +4,9 @@ layout: default
 <article class="post">
 
   <header class="post-header">
-    <h1 class="post-title">{{ page.title }}</h1>
+    <div class="border">
+    <h1 class="">{{ page.title }}</h1>
+    </div>
   </header>
 
   <div class="post-content">
