--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,7 +4,9 @@ layout: default
 <article class="post" itemscope itemtype="http://schema.org/BlogPosting">
 
   <header class="post-header">
-    <h1 class="post-title" itemprop="name headline">{{ page.title }}</h1>
+  <div class="border">
+    <h1 itemprop="name headline">{{ page.title }}</h1>
+  </div>
     <p class="post-meta">
       <time datetime="{{ page.date | date_to_xmlschema }}" itemprop="datePublished">{{ page.date | date: "%b %-d, %Y" }}</time>
     </p>
@@ -12,7 +14,7 @@ layout: default
 
   <div class="post-content" itemprop="articleBody">
 	  {% if page.imagesrc %} 
-        <img src="{{ page.imagesrc }}" alt="" align="left"/>
+        <img src="{{ page.imagesrc }}" alt="" class="half"/>
       {% endif %}
     {{ content }}
   </div>
